chore: SampleController, SampleControllerTest, SingController  리팩터링